add socket and real register

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -18,6 +18,7 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="/cart">Cart</a>
                 <a class="nav-link" href="/profile/1234">Profile</a>
+                <a class="nav-link" href="/register">Register</a>
             </div>
             </div>
         </div>
