--- a/src/views/realRegister.handlebars
+++ b/src/views/realRegister.handlebars
@@ -3,11 +3,11 @@
         <h1 class="bg-primary-subtle p-2 text-center text-primary w-100">REGISTER
             FORM</h1>
         <form class="d-flex flex-column w-50 m-3">
-            <input class="m-2 p-2 text-center" type="text" name="product" id="productName" placeholder="PRODUCT NAME" />
+            <input class="m-2 p-2 text-center" type="text" name="title" id="title" placeholder="PRODUCT NAME" />
             <input class="m-2 p-2 text-center" type="number" name="price" id="price" placeholder="PRICE" />
             <input class="m-2 p-2 text-center" type="number" name="stock" id="stock" placeholder="STOCK" />
             <input class="m-2 p-2 text-center" type="text" name="category" id="category" placeholder="CATEGORY" />
-            <input class="m-2 p-2 text-center" type="text" name="imgProduct" id="imgProduct" placeholder="IMAGE PRODUCT" />
+            <input class="m-2 p-2 text-center" type="text" name="photo" id="photo" placeholder="IMAGE PRODUCT" />
             <input class="m-2 p-2 text-center btn btn-primary" type="button" id="registerProduct" value="REGISTER PRODUCT!" />
         </form>
     </section>
