--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -4,8 +4,8 @@
         <section class="d-flex justify-content-evenly align-items-center flex-wrap w-100 m-3">
             {{#each products}}
             <article class="card my-2" style="width: 18rem; height: 28rem; display: flex; flex-direction: column;">
-                {{#if this.photo}}
-                <img src="{{this.photo}}" class="card-img-top" alt={{this._id}}
+                {{#if this.image}}
+                <img src="{{this.image}}" class="card-img-top" alt={{this._id}}
                     style="height: 18rem; object-fit: cover;">
                 {{else}}
                 <img src="https://cdn-icons-png.flaticon.com/512/9402/9402212.png" alt={{this._id}}
