--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,10 +1,10 @@
-<main class="d-flex w-100 flex-grow-1">
-    <section class="d-flex flex-column align-items-center w-100">
-        <h1 class="bg-primary-subtle p-2 text-center text-primary w-100">PROFILE</h1>
-        <section class="d-flex flex-column justify-content-center align-items-center w-25 m-3">
-            <h3 class="m-2 p-2 text-center">EMAIL: {{profile.email}}</h3>
-            <h5 class="m-2 p-2 text-center">AGE: {{profile.age}}</h5>
-            <img style="width: 360px; height: 360px" class="m-2 object-fit-cover" src="{{profile.photo}}" />
-        </section>
-    </section>
+<main class="d-flex flex-column align-items-center w-100 flex-grow-1">
+  <h1 class="bg-success-subtle p-2 text-center text-success w-100">MY PROFILE</h1>
+  <section class="m-3 d-flex flex-column justify-content-evenly flex-wrap align-items-center" style="width: 380px;">
+    <p class="card-title py-1 text-center w-100">{{profile.name}}</p>
+    <p class="card-title py-1 text-center w-100">{{profile.email}}</p>
+    <p class="card-title py-1 text-center w-100">{{profile.date}}</p>
+    <img class="w-100" src={{profile.avatar}} />
+  </section>
 </main>
+<script src="/scripts/register.js"></script>
