--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,10 +1,9 @@
 <main class="d-flex flex-column align-items-center w-100 flex-grow-1">
   <h1 class="bg-success-subtle p-2 text-center text-success w-100">MY PROFILE</h1>
   <section class="m-3 d-flex flex-column justify-content-evenly flex-wrap align-items-center" style="width: 380px;">
-    <p class="card-title py-1 text-center w-100">{{profile.name}}</p>
-    <p class="card-title py-1 text-center w-100">{{profile.email}}</p>
-    <p class="card-title py-1 text-center w-100">{{profile.date}}</p>
-    <img class="w-100" src={{profile.avatar}} />
+    <p id="name" class="card-title py-1 text-center w-100">Nombre: </p>
+    <p id="email" class="card-title py-1 text-center w-100">Email: </p>
+    <img id="avatar" class="w-100" alt="User Avatar"/>
   </section>
 </main>
-<script src="/scripts/register.js"></script>
+<script src="/scripts/profile.js"></script>
