add custom.router and adapt all the .router

--- a/src/views/userRegister.handlebars
+++ b/src/views/userRegister.handlebars
@@ -4,6 +4,7 @@
     <input class="m-2 p-2 text-center w-100" type="text" name="name" id="name" placeholder="NICKNAME" />
     <input class="m-2 p-2 text-center w-100" type="text" name="avatar" id="avatar" placeholder="AVATAR URL" />
     <input class="m-2 p-2 text-center w-100" type="date" name="date" id="date" />
+    <input class="m-2 p-2 text-center w-100" type="text" name="city" id="city" placeholder="CITY" />
     <input class="m-2 p-2 text-center w-100" type="number" name="age" id="age" placeholder="AGE" />
     <input class="m-2 p-2 text-center w-100" type="email" name="email" id="email" placeholder="EMAIL" />
     <input class="m-2 p-2 text-center w-100" type="password" name="password" id="password" placeholder="PASSWORD" />
